2006-07-03  Albert Chu  <chu11@llnl.gov>

	* src/libs, src/cerebrod: Support new listner ports, ips, and
	network interfaces.

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_calculate_destination_ip_is_multicast_setting,
	_cerebrod_calculate_heartbeat_frequency_ranged_setting,
	_cerebrod_calculate_heartbeat_source_network_interface_in_addr_and_index,
	_cerebrod_calculate_heartbeat_destination_ip_in_addr): Removed
	functions.  Collapse code into
	_cerebrod_calculate_configuration_data.

	* man/cerebro.conf.5.in, man/cerebro_module_devel.3.in: Update
	with new configs appropriately.

	* Several minor bug fixes.

	* configure.ac: Upped library version.
	
2006-06-29  Albert Chu  <chu11@llnl.gov>

	* tagged pre_config_multi_subnet_reorg

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c, src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_config.c, src/cerebrod/cerebrod_listener.c,
	src/cerebrod/cerebrod_speaker.c, man/cerebro.conf.5.in,
	man/cerebro_module_devel.3.in: Globally rename/readjust
	heartbeat_network_interface to heartbeat_source_network_interface.

	* src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_config.c, src/cerebrod/cerebrod_listener.c,
	src/cerebrod/cerebrod_speaker.c: Globally rename/readjust
	multicast config to destination_ip_is_multicast.

2006-06-29  Albert Chu  <chu11@llnl.gov>

	* tagged cerebro-1-0-4
	
2006-06-26  Albert Chu  <chu11@llnl.gov>

	* config/ac_cerebro_module_dir.m4: Cleanup using better workaround.
	
2006-06-19  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/hostlist.c: Update to newest library.
	
2006-04-14  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/error.h, src/libs/common/error.c: Add forgotten
	copyright headers.
	
2006-02-28  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/Makefile.am: Fix typo.

	* config/ac_shutdown.m4: Fix typos.

	* cerebro.spec.in: Add shutdown module.
	
2006-02-27  Albert Chu  <chu11@llnl.gov>
